welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: ';' expected but '.' found.
    if (nums(i+1)==x+5) && Math.abs(nums(i+2)-(x-1))<3){
                               ^