welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
  var r=false
  for (i<-0 to nums.length-3){
    var x=nums(i)
    if (nums(i+1)==x+5) && Math.abs(nums(i+2)-(x-1))<3){
      r=true
    }
  }
  return r
}